Update 'u8e34y3xu-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-68185016d1.sw09.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:fb77c979de90c6f77b6bcfac26d3ec52bfe6f6e6@sha256:afd419e3c2074d3a1ae009055c5917512edac9e68169dacd18e89d449443afe8

--- a/components/u8e34y3xu-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/u8e34y3xu-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: u8e34y3xu-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-68185016d1.sw09.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:fb77c979de90c6f77b6bcfac26d3ec52bfe6f6e6@sha256:afd419e3c2074d3a1ae009055c5917512edac9e68169dacd18e89d449443afe8
+          name: container-image
